--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<scope>annotationProcessor</scope>
+			<version>1.18.24</version> <!-- Ajusta a la versión que estés utilizando -->
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
@@ -110,7 +111,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<version>8.0.33</version> <!-- Ajusta la versión según tu necesidad -->
 		</dependency>
 	</dependencies>
 
