--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<version>8.0.33</version> <!-- Ajusta la versión según tu necesidad -->
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 
