--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,20 @@
 spring.application.name=TrabajoFinalFinanzas-Backend
 debug=true
 server.port=9000
-
-# Configuración de la base de datos PostgreSQL en la nube
-spring.datasource.url=jdbc:mysql://bbypsuaxfveara0uq3sj-mysql.services.clever-cloud.com:3306/bbypsuaxfveara0uq3sj
-  spring.datasource.username=u8osrx7nysd9gx6b
-spring.datasource.password=US6EOycQvYFixmBBhE0w
-
-# Configuración de JPA e Hibernate para PostgreSQL
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# URL y credenciales de la base de datos Azure SQL
+spring.datasource.url=jdbc:sqlserver://<azure-database-server-name>.database.windows.net:1433;database=<database-name>;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=<username>
+spring.datasource.password=<password>
+# Configuración de JPA e Hibernate para SQL Server
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-# No envia el trace al usuario cuando hay error.
+# Configuración de Jackson
+spring.jackson.serialization.write-dates-as-timestamps=false
+# Configuración del servidor
 server.error.include-stacktrace=never
-jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
 spring.devtools.restart.log-condition-evaluation-delta=false
+# Configuración JWT
+jwt.secret=4t7w!z%C*F-JaNdRgUkXn2r5u8x/A?D(G+KbPeShVmYq3s6v9y$B&E)H@McQfTjW
